# ScatterBootstrap

./: .flake8  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EXAMPLE_ADDING_NEW_MODEL.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES_v0.3.0.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
paper/: paper.bib  paper.md
src/: data.py  data_extraction.py  data_extraction_example.py  data_extraction_functions.py  difficult_fit.py  effective_radius.py  finding_compiled_c_files.py  fitted_params_table.py  initial_params.json  initial_params_all_structure_factors.json  main.py  plot_comparisons.py  utils.py  utils_old.py  without_sf.py
src/cluster/: README.md  collect_results.py  content_verification.py  process_data.py  requirements_cluster.txt  setup_cluster.py  submit_job.sh  test_c_extensions.py  transfer.sh
src/core_shell_cylinder/: core_shell_cylinder  core_shell_cylinder.c  gauss76.c  gauss76.h  hayter_msa.c  hayter_msa.h  hayter_msa_wrapper.py  polevl.c  polevl.h  sas_J1.c  sas_J1.h  utils.h  wrapper.py
src/form_factor/barbell/: barbell.c  barbell.h  wrapper.py
src/form_factor/bcc_paracrystal/: bcc_paracrystal.c  wrapper.py
src/form_factor/core_multi_shell/: core_multi_shell.c  wrapper.py
src/form_factor/core_shell_cylinder/: core_shell_cylinder.c  wrapper.py
src/form_factor/ellipsoid/: ellipsoid.c  ellipsoid.h  wrapper.py
src/form_factor/elliptical_cylinder/: elliptical_cylinder.c  elliptical_cylinder.h  wrapper.py
src/form_factor/fcc_paracrystal/: fcc_paracrystal.c  sphere_form.c  sphere_form.h  wrapper.py
src/form_factor/fuzzy_sphere/: __init__.py  wrapper.py
src/form_factor/lamellar_hg/: __init__.py  lamellar_hg.c  lamellar_hg.h  wrapper.py
src/form_factor/linear_pearls/: __init__.py  linear_pearls.h  wrapper.py
src/form_factor/onion/: __init__.py  onion.c  onion.h  wrapper.py
src/form_factor/polymer_micelle/: __init__.py  polymer_micelle.c  polymer_micelle.h  wrapper.py
src/form_factor/pringle/: __init__.py  pringle.c  wrapper.py
src/form_factor/sphere/: __init__.py  sphere.h  wrapper.py
src/lib/: gauss150.c  gauss150.h  gauss76.c  gauss76.h  libsas_core.lib  polevl.c  sas_J0.h  sas_J1.c  sas_J1.h  sas_JN.c  sas_constants.h  sas_core.h  sas_math.c  sas_math.h  utils.c
src/scatterbootstrap/: __init__.py  _lib_finder.py  core.py
src/scatterbootstrap/form_factors/: __init__.py
src/scatterbootstrap/form_factors/barbell/: __init__.py  wrapper.py
src/scatterbootstrap/form_factors/bcc_paracrystal/: __init__.py  bcc_paracrystal.h  wrapper.py
src/scatterbootstrap/form_factors/core_multi_shell/: __init__.py  core_multi_shell.h  wrapper.py
src/scatterbootstrap/form_factors/core_shell_cylinder/: core_shell_cylinder.h  wrapper.py
src/scatterbootstrap/form_factors/ellipsoid/: __init__.py  wrapper.py
src/scatterbootstrap/form_factors/elliptical_cylinder/: __init__.py  wrapper.py
src/scatterbootstrap/form_factors/fcc_paracrystal/: __init__.py  fcc_paracrystal.c  fcc_paracrystal.h  wrapper.py
src/scatterbootstrap/form_factors/fuzzy_sphere/: fuzzy_sphere.c  fuzzy_sphere.h  wrapper.py
src/scatterbootstrap/form_factors/lamellar_hg/: wrapper.py
src/scatterbootstrap/form_factors/linear_pearls/: linear_pearls.c  wrapper.py
src/scatterbootstrap/form_factors/onion/: wrapper.py
src/scatterbootstrap/form_factors/polymer_micelle/: wrapper.py
src/scatterbootstrap/form_factors/pringle/: pringle.h  wrapper.py
src/scatterbootstrap/form_factors/sphere/: sphere.c  wrapper.py
src/scatterbootstrap/lib/: __init__.py  gauss150.h  sas_3j1x_x.c  sas_J0.c  sas_JN.h  utils.h
src/scatterbootstrap/structure_factors/hardsphere/: __init__.py  hardsphere.h  wrapper.py
src/scatterbootstrap/structure_factors/hayter_msa/: __init__.py  wrapper.py
src/structure_factor/: __init__.py
src/structure_factor/hardsphere/: hardsphere.c  test_hardsphere  test_hardsphere.c  wrapper.py
src/structure_factor/hayter_msa/: hayter_msa.c  wrapper.py
tests/: conftest.py  test_api.py  test_fitting.py  test_models.py
