[build-system]
requires = ["setuptools>=45", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "core_shell_cylinder_project"
version = "0.3.0"
description = "Advanced SAS analysis with bootstrapping, cluster computing, and high-performance C extensions for core-shell cylinder models."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tobias Kaufmann", email = "tkaufman@student.ethz.ch"},
]
keywords = ["scattering", "form factor", "structure factor", "small angle scattering", "SAS", "SAXS", "SANS", "bootstrapping", "cluster computing", "uncertainty quantification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "pandas>=1.3.0",
    "cffi>=1.14.0",
    "tqdm>=4.60.0",
]

[project.urls]
Homepage = "https://github.com/TobiasMKaufmann/echemes-bootstrapping"
Documentation = "https://github.com/TobiasMKaufmann/echemes-bootstrapping#readme"
Repository = "https://github.com/TobiasMKaufmann/echemes-bootstrapping.git"
"Bug Tracker" = "https://github.com/TobiasMKaufmann/echemes-bootstrapping/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
